apps/base/watchyourlan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: watchyourlan
  labels:
    app.kubernetes.io/name: watchyourlan
    app.kubernetes.io/part-of: homelab-apps
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
