apps/base/watchyourlan/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchyourlan
  namespace: watchyourlan
spec:
  internalTrafficPolicy: Local
  selector:
    app: watchyourlan
  ports:
    - name: http
      port: 80
      targetPort: 8840
